step 1: エントリポイントを指定できるようにした

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,20 +10,20 @@ enable_testing()
 
 add_executable(me9cc ./me9cc/main.c)
 
-# Run Test
-file(GLOB test_inputs ./me9cc/tests/asset/input/a_int.me9c)
+# Run Test for return integer functions
+file(GLOB test_inputs ./me9cc/tests/asset/equal_integer/input/a_int.me9c)
 foreach(test_input ${test_inputs})
     get_filename_component(test_output_name ${test_input} NAME)
     add_custom_command(
         OUTPUT out.s
-        COMMAND $<TARGET_FILE:me9cc> ${test_input} out.s
+        COMMAND $<TARGET_FILE:me9cc> ${test_input} out.s ret_int
     )
     set_property(SOURCE out.s PROPERTY LANGUAGE C)
     add_executable(equal_integer ./me9cc/tests/equal_integer.c out.s)
-    target_include_directories(equal_integer PRIVATE ./me9cc/tests/asset/include)
+    target_include_directories(equal_integer PRIVATE ./me9cc/tests/asset/equal_integer/include)
     add_test(
         NAME test_a_int
-        COMMAND $<TARGET_FILE:equal_integer> ./me9cc/tests/asset/output/${test_output_name}.out
+        COMMAND $<TARGET_FILE:equal_integer> ./me9cc/tests/asset/equal_integer/output/${test_output_name}.out
         CONFIGURATIONS Debug
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
     )
